convertor/crates/confly/tests/snapshots/provider_cli_test__test_subscription_clash_boslife_cmd_2.snap
---
source: crates/confly/tests/provider_cli_test.rs
expression: result
---
提供商原始订阅
http://127.0.0.1:<PORT>/subscription?token=bppleman&flag=Clash
转换器订阅
<SERVER>profile/clash/boslife?interval=86400&strict=false&sub_url=<ENC_SUB_URL>
转发原始订阅
<SERVER>raw-profile/clash/boslife?interval=86400&strict=false&sub_url=<ENC_SUB_URL>
订阅日志记录
<SERVER>api/sub-logs?secret=KbchdpzmTkPVcTOwdNg51THtHyhRCvtFf99LWQSE6ULTZ1Y6DoVx2ClrEx8YLo35
规则集: [Subscription]
<SERVER>rule-provider/clash/boslife?interval=86400&policy[name]=DIRECT&policy[is_subscription]=true&sub_url=<ENC_SUB_URL>
规则集: [BosLife]
<SERVER>rule-provider/clash/boslife?interval=86400&policy[name]=BosLife&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
规则集: [BosLife: no-resolve]
<SERVER>rule-provider/clash/boslife?interval=86400&policy[name]=BosLife&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
规则集: [BosLife: force-remote-dns]
<SERVER>rule-provider/clash/boslife?interval=86400&policy[name]=BosLife&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
规则集: [DIRECT]
<SERVER>rule-provider/clash/boslife?interval=86400&policy[name]=DIRECT&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
规则集: [DIRECT: no-resolve]
<SERVER>rule-provider/clash/boslife?interval=86400&policy[name]=DIRECT&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
规则集: [DIRECT: force-remote-dns]
<SERVER>rule-provider/clash/boslife?interval=86400&policy[name]=DIRECT&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
